--- a/src/app/core/header/header.html
+++ b/src/app/core/header/header.html
@@ -3,7 +3,7 @@
         <h2>LOGO</h2>
     </div>
     <div>
-        <a routerlink="/inicio">Inicio</a>
-        <a routerlik="">Cursos</a>
+        <a routerLink="/inicio">Inicio</a>
+        <a routerLink="/cursos">Cursos</a>
     </div>
 </nav>
