--- a/src/app/pages/cursos/cursos.html
+++ b/src/app/pages/cursos/cursos.html
@@ -1,13 +1,23 @@
 <section>
-    <h2>CURSOS</h2>
-    <div>
-        <div style="background-color: rgb(0, 73, 230); color: white;" *ngfor="let curso of cursos">
-            <h3>{{curso.nombre}}</h3>
-            <small>Nivel: {{curso.nivel}}</small>
-            <p>{{curso.descripcion}}</p>
-            <span>{{curso.precio}}</span>
-            <button (click)="verDetalleCurso(curso.id)">Tabla de contenido</button>
+  <h2>CURSOS</h2>
+  <div>
+    <div class="curso-card" *ngFor="let curso of cursos">
+      <h3>{{curso.nombre}}</h3>
+      <small>Nivel: {{curso.nivel}}</small>
+      <p>{{curso.descripcion}}</p>
+      <span>Precio: {{curso.precio}}</span>
+      <br>
+      <button (click)="mostrarContenidos(curso)">Ver tabla de contenido</button>
+      <button (click)="verDetalleCurso(curso.id)">Ver detalle</button>
 
-        </div>
+      <!-- Mostrar contenidos solo para el curso seleccionado -->
+      <div *ngIf="cursoSeleccionado === curso" class="curso-contenidos">
+        <h4>Contenidos de {{cursoSeleccionado.nombre}}</h4>
+        <ul>
+          <li *ngFor="let contenido of cursoSeleccionado.contenidos">{{contenido}}</li>
+        </ul>
+        <button (click)="cursoSeleccionado = undefined">Cerrar</button>
+      </div>
     </div>
+  </div>
 </section>
